--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,46 +11,48 @@
         android:id="@+id/button_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="192dp"
+        android:layout_marginBottom="92dp"
         android:backgroundTint="@color/green"
         android:drawableEnd="@drawable/next_icon"
         android:text="Next"
         android:textColor="@color/powder"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/button_backRegister"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginTop="36dp"
         android:src="@drawable/back_icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.041"
+        app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageview_registerLogo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="160dp"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:layout_marginTop="116dp"
         android:src="@drawable/neighbors_icon"
+        app:layout_constraintBottom_toTopOf="@+id/editText_registerName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.649" />
 
     <TextView
         android:id="@+id/textView_registerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="12dp"
         android:fontFamily="casual"
         android:text="Neighbors"
         android:textColor="@color/dark_blue"
-        android:textSize="25sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imageview_registerLogo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,14 +62,16 @@
         android:id="@+id/EditText_registerPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="64dp"
         android:drawableStart="@drawable/password_icon"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/button_next"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
@@ -75,11 +79,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:drawableStart="@drawable/mail_icon"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="text"
-        android:drawableStart="@drawable/mail_icon"
-        android:drawablePadding="10dp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/EditText_registerPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
