--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,88 +7,88 @@
     android:background="@color/powder">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/neighbors_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toEndOf="@+id/button_backProfile"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
         android:id="@+id/button_backProfile"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginTop="36dp"
         android:src="@drawable/back_icon"
-        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintHorizontal_bias="0.086"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <EditText
+        android:id="@+id/editTextName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="108dp"
+        android:drawableStart="@drawable/person_icon"
+        android:drawablePadding="10dp"
+        android:ems="12"
+        android:hint="Name"
+        android:padding="10dp"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextName"
-        android:layout_width="321dp"
-        android:layout_height="45dp"
-        android:background="@drawable/border1"
-        android:drawableStart="@drawable/person_icon"
-        android:drawablePadding="10dp"
-        android:hint="Name"
-        android:padding="10dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <EditText
         android:id="@+id/editTextAge"
-        android:layout_width="321dp"
-        android:layout_height="45dp"
-        android:background="@drawable/border1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:drawableStart="@drawable/cake_icon"
         android:drawablePadding="10dp"
+        android:ems="12"
         android:hint="Age"
         android:padding="10dp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName" />
 
     <EditText
         android:id="@+id/editTextCity"
-        android:layout_width="321dp"
-        android:layout_height="45dp"
-        android:background="@drawable/border1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:drawableStart="@drawable/location_icon"
         android:drawablePadding="10dp"
+        android:ems="12"
         android:hint="City"
         android:padding="10dp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAge" />
 
     <EditText
         android:id="@+id/editTextInterest"
-        android:layout_width="321dp"
-        android:layout_height="45dp"
-        android:background="@drawable/border1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:drawableStart="@drawable/hobby_icon"
         android:drawablePadding="10dp"
+        android:ems="12"
         android:hint="Interests"
         android:padding="10dp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextCity" />
 
     <EditText
         android:id="@+id/editTextBio"
-        android:layout_width="321dp"
-        android:layout_height="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="473dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/border1"
+        android:ems="12"
         android:gravity="top"
         android:hint="About me"
         android:padding="10dp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextInterest" />
@@ -97,14 +97,20 @@
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="36dp"
         android:backgroundTint="@color/green"
+        android:shadowColor="@color/black"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="5"
         android:text="Save"
+        android:textSize="20sp"
         android:textColor="@color/powder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextBio"
+        app:layout_constraintVertical_bias="0.473" />
 
 
 
