--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -54,10 +54,10 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="93dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/powder"
-        app:itemIconTint="@color/bottom_nav_icon_color"
+        android:background="@color/green"
         app:itemBackground="@null"
-        app:menu="@menu/bottom_navigation"/>
+        app:itemIconTint="@color/bottom_nav_icon_color"
+        app:menu="@menu/bottom_navigation" />
 </RelativeLayout>
