--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -10,33 +10,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/border"
         android:layout_marginTop="16dp"
+        android:background="@drawable/border"
+        android:orientation="horizontal"
         android:padding="8dp">
 
-
-
-        <Button
+        <ImageButton
             android:id="@+id/btnPrevMonth"
-            android:layout_width="0dp"
+            android:layout_width="68dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_weight="1"
             android:backgroundTint="@color/green"
-            android:shadowColor="#000000"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            android:shadowRadius="5"
-            android:text="@string/btn_calendar_label_prev_month"
-            android:textColor="@color/powder" />
+            app:srcCompat="@drawable/back_icon" />
 
         <TextView
             android:id="@+id/tvCalendarMontYear"
             android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_weight="1"
             android:fontFamily="casual"
             android:gravity="center"
             android:text="Feb 2025"
@@ -44,32 +35,25 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-
-        <Button
+        <ImageButton
             android:id="@+id/btnNextMonth"
-            android:layout_width="0dp"
+            android:layout_width="68dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_weight="1"
             android:backgroundTint="@color/green"
-            android:shadowColor="#000000"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            android:shadowRadius="5"
-            android:text="@string/btn_label_calender_next_month"
-            android:textColor="@color/powder" />
+            android:rotationY="180"
+            app:srcCompat="@drawable/back_icon" />
+        />
 
 
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:background="@drawable/border"
-        android:padding="8dp"
-        android:layout_marginTop="2dp">
+        android:padding="8dp">
 
         <TextView
             android:layout_width="0dp"
@@ -150,30 +134,30 @@
 
 
     </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/calenderRecyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="4dp"
         android:layout_weight="1"
-        android:background="@drawable/border"
-        android:layout_marginTop="4dp"/>
+        android:background="@drawable/border" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:background="@drawable/border"
         android:id="@+id/eventsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_marginTop="12dp"
-       />
+        android:layout_weight="1"
+        android:background="@drawable/border" />
 
     <Button
-       android:id="@+id/btnAddEvent"
-        android:layout_marginBottom="56dp"
+        android:id="@+id/btnAddEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:layout_gravity="center"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="56dp"
         android:backgroundTint="@color/green"
         android:shadowColor="#000000"
         android:shadowDx="2"
