--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,23 +6,12 @@
     android:layout_height="match_parent"
     android:background="@color/powder">
 
-    <ImageView
-        android:id="@+id/button_backProfile"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="36dp"
-        android:src="@drawable/back_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <EditText
         android:id="@+id/editTextName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="76dp"
         android:drawableStart="@drawable/person_icon"
         android:drawablePadding="10dp"
         android:ems="12"
@@ -81,7 +70,7 @@
     <EditText
         android:id="@+id/editTextBio"
         android:layout_width="wrap_content"
-        android:layout_height="473dp"
+        android:layout_height="250dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/border1"
         android:ems="12"
@@ -97,21 +86,18 @@
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="@color/green"
         android:shadowColor="@color/black"
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="5"
         android:text="Save"
-        android:textSize="20sp"
         android:textColor="@color/powder"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextBio"
-        app:layout_constraintVertical_bias="0.473" />
-
+        app:layout_constraintTop_toBottomOf="@+id/editTextBio" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
