--- a/app/src/main/res/drawable/group_item_background.xml
+++ b/app/src/main/res/drawable/group_item_background.xml
@@ -3,17 +3,16 @@
     android:shape="rectangle">
 
     <!-- Background Color -->
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/powder" />
 
     <!-- Border Color & Thickness -->
-    <stroke android:width="3dp" android:color="#FF6200EE" />
+    <stroke android:width="3dp" android:color="@color/green" />
 
     <!-- Rounded Corners -->
     <corners android:radius="12dp" />
 
     <!-- Padding inside the shape -->
     <padding
-        android:left="8dp"
         android:right="8dp"
         android:top="8dp"
         android:bottom="8dp" />
