--- a/app/src/main/res/layout/calendar_event_cell.xml
+++ b/app/src/main/res/layout/calendar_event_cell.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:id="@+id/card_view"
     android:layout_margin="5dp"
-    app:cardBackgroundColor="#D9D9D9"
+    app:cardBackgroundColor="@color/dark_blue"
     app:cardCornerRadius="12dp"
     app:cardElevation="3dp"
     app:contentPadding="4dp"
@@ -32,7 +32,7 @@
             android:gravity="end"
             android:text="@string/Caelnder_title_demo"
             android:textAlignment="textEnd"
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/light_green"
             android:textSize="16sp"
 
             android:textStyle="bold"
@@ -49,7 +49,7 @@
             android:gravity="end"
             android:text="@string/Calendar_demo_text"
             android:textAlignment="textEnd"
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/light_green"
             android:textSize="16sp"
 
             android:textStyle="bold"
@@ -66,7 +66,8 @@
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/green" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
