--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -18,6 +18,14 @@ android:orientation="vertical">
         android:background="@drawable/border">
 
         <!-- TextView for Group Name (to the right of image) -->
+        <ImageView
+            android:id="@+id/imageback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:src="@drawable/back_icon"
+            android:layout_gravity="center_vertical"/>
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/groupImage"
             android:layout_width="50dp"
