--- a/app/src/main/res/color/bottom_nav_icon_color.xml
+++ b/app/src/main/res/color/bottom_nav_icon_color.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/dark_blue" android:state_checked="true" />
-    <item android:color="@color/blue"/>
+    <item android:color="@color/powder"/>
 
 
 </selector>
