--- a/app/src/main/res/layout/calender_make_new_event_dialog.xml
+++ b/app/src/main/res/layout/calender_make_new_event_dialog.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:fontFamily="casual"
-        android:text="@string/registrera_ny_aktvitet"
+        android:text="skapa ny aktivitet"
         android:textColor="@color/dark_blue"
         android:textSize="20sp"
         android:textStyle="bold"/>
