--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -11,8 +11,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Search"
-            android:layout_margin="20dp"
+            android:layout_margin="8dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/searchEditText"
@@ -24,6 +25,17 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:text="Mina Grupper:"
+        android:textSize="18sp"
+        android:layout_marginStart="8dp"
+        android:fontFamily="casual"
+        android:textStyle="bold"
+        android:textColor="@color/dark_blue"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,12 +43,23 @@
         android:layout_marginBottom="80dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myGroupsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border1"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Rekomenderade grupper i ditt område:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:fontFamily="casual"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/dark_blue"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recommendedGroupsRecyclerView"
@@ -45,7 +68,7 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:layout_marginTop="5dp"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border1"/>
 
         <Button
             android:id="@+id/btnAddGroup"
@@ -58,7 +81,7 @@
             android:shadowDx="2"
             android:shadowDy="2"
             android:shadowRadius="5"
-            android:text="@string/starta_ny_grupp"
+            android:text="Skapa en ny grupp"
             android:textColor="@color/powder" />
     </LinearLayout>
 </LinearLayout>
