--- a/app/src/main/res/drawable/sent_message_bg.xml
+++ b/app/src/main/res/drawable/sent_message_bg.xml
@@ -1,7 +1,7 @@
 <!-- sent_message_bg.xml -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#DCF8C6"/>
+    <solid android:color="#A7EB6E"/>
     <corners android:radius="16dp"/>
     <padding
         android:left="10dp"
