--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -43,7 +43,7 @@ android:orientation="vertical">
 
 
 <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recyclerView"
+    android:id="@+id/recyclerViewchatt"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"/>
