--- a/app/src/main/res/layout/item_send.xml
+++ b/app/src/main/res/layout/item_send.xml
@@ -1,29 +1,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:gravity="end"
     android:padding="8dp"
     android:layout_marginBottom="4dp">
 
+        <!-- Sender's Name -->
+        <TextView
+            android:id="@+id/senderNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sender Name"
+            android:textColor="#888888"
+            android:textSize="12sp"
+            android:layout_marginBottom="4dp"/>
+
+        <!-- Message Text -->
         <TextView
             android:id="@+id/messageTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Message Text"
             android:textColor="#000000"
             android:textSize="16sp"
             android:background="@drawable/sent_message_bg"
             android:padding="10dp"
             android:maxWidth="250dp"
             android:ellipsize="end"
-            android:layout_marginBottom="4dp"
-            android:layout_gravity="end"/>
+            android:gravity="end"/>
 
+        <!-- Message Time -->
         <TextView
-            android:id="@+id/timeTextView"
+            android:id="@+id/sendtimeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Time"
             android:textColor="#888888"
             android:textSize="12sp"
-            android:layout_gravity="end"/>
+            android:gravity="end"/>
 </LinearLayout>
